--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --base-href /netflix-angular/",
+    "build:prod": "ng build --base-href /netflix-angular/ && cp ./dist/netflix-angular/index.html ./dist/netflix-angular/404.html",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
